fix:  removed site scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@ html, body {
   height: 100%;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 p {
   font-family: 'Montserrat';
   color:black;
